Fixed active form on account details, increased z-index on dropdowns, added active menu item class on account sidebar

--- a/src/app/core/layout/public/header/public-header.component.scss
+++ b/src/app/core/layout/public/header/public-header.component.scss
@@ -18,7 +18,7 @@ nav {
   }
 
   .nav-dropdown {
-    @apply absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
+    @apply absolute right-0 z-40 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
 
     .nav-dropdown-item {
       @apply w-full text-left block px-4 py-2 text-sm text-gray-700 hover:bg-blue-950 hover:text-white outline-none ring-offset-2 focus:ring-2 focus-visible:ring-4 ring-black transition-colors ease-in-out;
